Take picture task added

--- a/src/package.json
+++ b/src/package.json
@@ -7,6 +7,7 @@
     "async": "^2.6.1",
     "noble": "^1.9.1",
     "pubsub-js": "^1.6.1",
+    "python-shell": "0.5.0",
     "rpi-gpio-buttons": "^1.1.0"
   },
   "devDependencies": {},
